# compiler

./: .gitignore  CMakeLists.txt  Makefile  NFATest  README.md  WORKSPACE  genregex.bash  grammar.txt  main  restoreregex.bash
regex/: regex.pgen
sandbox/: BUILD  sandbox.prez  stringutil.prez
scripts/: compile.bash  genregex.bash  mkparser.bash  restoreregex.bash  test_all.bash
src/: NFA.hpp  build_parser.cpp  build_parser.hpp  config_grammar.hpp  config_lexer.cpp  config_lexer.hpp  config_parse.cpp  config_parse.hpp  dfa.hpp  expr.txt  generate.cpp  generate.hpp  grammar1.hpp  lexer.cpp  lr0_grammar.hpp  lr0_rules.hpp  main.cpp  nfa.hpp  null_first.cpp  null_first.hpp  null_first_follow.cpp  null_first_follow.hpp  parse.cpp  parse.hpp  parsegen.cpp  regex.cpp  regex.hpp  regex_eval.cpp  regex_eval.hpp  regex_grammar.hpp  regex_lexer.cpp  regex_lexer.hpp  regex_match.cpp  regex_match.hpp  regex_parse.cpp  regex_parse.hpp  rules.hpp  slr1_grammar.hpp  tokenize.cpp  tokenize.hpp  (+2 more)
src/assembly/: BUILD  CMakeLists.txt  asm_decl.cpp  asm_instr.cpp  assembly.hpp  flow_graph.cpp  flow_graph.hpp  function.cpp  function.hpp  instruction.cpp  instruction.hpp  interference_graph.cpp  interference_graph.hpp  main.cpp  runtime.c  temp.cpp  temp.hpp
src/assembly/reg_alloc/: flow_graph.cpp  flow_graph.hpp  interference_graph.cpp  interference_graph.hpp
src/built_in/: string.prez
src/imports/: string.prez  string.s  to_string.prez
src/language/: BUILD  CMakeLists.txt  compile_and_run.bzl  ctx.cpp  ctx.hpp  ctx_tree.cpp  decl.cpp  decl.hpp  expr.hpp  expr_as_bool.cpp  expr_ctor.cpp  expr_to_im.cpp  lang.pgen  lang_decl.cpp  lang_expr.cpp  lang_expr_asbool.cpp  lang_expr_ctor.cpp  lang_expr_toim.cpp  lang_stmt.cpp  language.hpp  main.cpp  src_file.cpp  src_file.hpp  stmt.cpp  stmt.hpp  translate_expr.cpp  type.cpp  utils.cpp  utils.hpp
src/language/built_in/: BUILD
src/language/tests/: BUILD  compiler_tests.bzl  test_error.py  test_success.bash  test_utils.bzl
src/language/tests/asm_output/: arith.asm
src/language/tests/error/: class.prez  imports.prez  inheritance.prez  redef.prez  return.prez  undef.prez
src/language/tests/error/imports/folder/subfolder/: file.prez
src/language/tests/success/: base_method.prez  callee_save.prez  comp.prez  file.prez  file2.prez  for.prez  function.prez  inheritance.prez  opt.prez  spill.prez  static.prez  ternary.prez
src/language/tests/success/imports/: file.prez  other_file.prez
src/language/typecheck/: context.cpp  context.hpp  ctx_tree.cpp  ctx_tree.hpp  type.cpp  type.hpp  typecheck.cpp
src/main/: CMakeLists.txt  lang.pgen  main.cpp  parser.cpp  parser.hpp  runtime.c  syscall.s  to_string.prez
src/misc/: CMakeLists.txt  error_store.cpp  error_store.hpp  errors.hpp  logger.cpp  logger.hpp
src/monadic/: parser.hpp  parser_impl.hpp
src/parser/: BUILD  CMakeLists.txt  build_parser.cpp  build_parser.hpp  config_grammar.hpp  config_lexer.cpp  config_lexer.hpp  config_parse.cpp  config_parse.hpp  dfa.hpp  generate.cpp  generate.hpp  null_first.cpp  null_first.hpp  parse_info.hpp  parsegen.cpp  queue_set.hpp  regex.cpp  regex.hpp  regex.pgen  regex_eval.cpp  regex_eval.hpp  regex_merge.cpp  regex_merge.hpp  regex_parse.cpp  regex_parse.hpp  regex_parser.cpp  regex_parser.hpp  rules.hpp  utils.hpp  write_config_lexer.cpp
src/parser/obsolete/: regex_parse.cpp  regex_parse.hpp  regex_parser_backup.cpp  regex_parser_backup.hpp
src/parser/testing/: BUILD  expr.pgen  write_lexer.cpp  write_parser.cpp
src/parser/tests/: BUILD  build_parser_test.cpp  null_first_test.cpp  parse_test.cpp  parsegen_test.cpp  queue_set_test.cpp  regex_test.cpp  tokenize_test.cpp
src/x86gen/: CMakeLists.txt  flow_graph.cpp  flow_graph.hpp  function.cpp  function.hpp  instruction.cpp  instruction.hpp  interference_graph.cpp  interference_graph.hpp  main.cpp  temp.hpp
test/: NFATest.cpp  bad_expr_parser.cpp  bad_expr_parser.hpp  build_parser_test.cpp  dfa_test.cpp  expr_config.txt  expr_grammar.hpp  expr_parser.cpp  expr_parser.hpp  gen_regex_dfa.hpp  genparse_test.cpp  grammar1.hpp  lr0_grammar.hpp  lr0_test.cpp  lr1_grammar.hpp  lr1_test.cpp  nfa_test.cpp  null_first_follow_test.cpp  null_first_test.cpp  nullable_grammar.hpp  parse_test.cpp  parsegen_test.cpp  regex_test.cpp  rules_test.cpp  tokenize.cpp  tokenize.hpp  tokenize_grammar.hpp  tokenize_test.cpp  write_dfa.cpp  write_dfa_test.cpp  write_lexer.cpp  write_parser.cpp
test/assembly/: CMakeLists.txt
test/parser/: CMakeLists.txt  build_parser_test.cpp  dfa_test.cpp  null_first_test.cpp  parse_test.cpp  parsegen_test.cpp  regex_test.cpp  tokenize_test.cpp
test/parser/utils/: expr.gp  expr.hpp  expr.pgen  expr_grammar.hpp  nullable_grammar.hpp  write_lexer.cpp  write_parser.cpp
test/translator/: CMakeLists.txt  arith_test.prez  comp_test.prez  function_test.prez  run_test.bash  sandbox.prez  test_error.py  test_success.bash  while_test.prez
test/translator/error/: access.prez  bad_class_test.prez  bad_import_test.prez  bad_inheritance_test.prez  base_method.prez  class.prez  const.prez  final.prez  inheritance.prez  member.prez  narrowing_test.prez  param.prez  param_test.prez  redef_test.prez  return_test.prez  rvalue_assign_test.prez  static.prez  type_test.prez  undef1_test.prez  undef2_test.prez  undef3_test.prez  undef4_test.prez  undef_test.prez  unused.prez
test/translator/error/import_test/: other_file.prez
test/translator/success/: arith_test.prez  array.prez  array_test.prez  base_method.prez  base_method_test.prez  callee_save_test.prez  cast.prez  cast_test.prez  class.prez  comp_test.prez  file.prez  file2.prez  for_test.prez  function_test.prez  import_test.prez  imports.prez  incdec_test.prez  inheritance.prez  inheritance_test.prez  opt_test.prez  spill_test.prez  static.prez  strlit.prez  ternary_test.prez  update_test.prez  while_test.prez
test/utils/: expr.gp  expr.hpp  expr_config.txt  expr_grammar.hpp  nullable_grammar.hpp  write_lexer.cpp  write_parser.cpp
test/x86gen/: CMakeLists.txt  compile_tests.cpp  run_test.bash
(+9 files in other folders)
